--- a/FrontEndAuth/frontend/public/index.html
+++ b/FrontEndAuth/frontend/public/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline" rel="stylesheet">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>tegram</title>
+    <link rel="icon" href="<%= BASE_URL %>Photo-Video-Film-Reel-Filled-icon.png" />
+    <title>Smalltown Cinemas</title>
   </head>
   <body>
     <noscript>
-      <strong
-        >We're sorry but tegram doesn't work properly without JavaScript
-        enabled. Please enable it to continue.</strong
-      >
+      <strong>
+        We're sorry but Smalltown Cinemas doesn't work properly without JavaScript
+        enabled. Please enable it to continue.
+      </strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
